chore : update .gitignore
Update .gitignore for CatBoost Baseline

'#5'

--- a/.gitignore
+++ b/.gitignore
@@ -419,4 +419,19 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Baseline Code & DataSet
+/code/dkt
+/code/lightgcn
+/eda
+
+/data
+.empty
+
+wandb
+models
+output
+
+# catboost
+catboost_info
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,python,jupyternotebooks,pycharm,data,linux,git
