--- a/.gitignore
+++ b/.gitignore
@@ -419,4 +419,20 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Baseline Code & DataSet
+/code/dkt
+/code/lightgcn
+/eda
+/code/catboost/configs
+
+/data
+.empty
+
+wandb
+models
+output
+
+# catboost
+catboost_info
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,python,jupyternotebooks,pycharm,data,linux,git
