--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
-  "python.formatting.blackArgs": ["--line-length", "80"],
+  "python.formatting.blackArgs": [
+    "--line-length",
+    "80"
+  ],
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true
   },
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": false,
-	"python.linting.lintOnSave": true,
+  "python.linting.lintOnSave": true,
   "python.linting.flake8Enabled": true,
+  "python.analysis.typeCheckingMode": "off",
 }
