--- a/code/catboost/pyproject.toml
+++ b/code/catboost/pyproject.toml
@@ -12,6 +12,11 @@ pandas = "^2.0.1"
 numpy = "^1.24.3"
 scikit-learn = "^1.2.2"
 catboost = "^1.2"
+jupyter = "^1.0.0"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.23.1"
+easydict = "^1.10"
 
 [build-system]
 requires = ["poetry-core"]
