--- a/code/boosting/pyproject.toml
+++ b/code/boosting/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.0.1"
 numpy = "^1.24.3"
 scikit-learn = "^1.2.2"
 catboost = "^1.2"
+lightgbm = "^3.3.5"
 jupyter = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
