--- a/code/light-gcn/pyproject.toml
+++ b/code/light-gcn/pyproject.toml
@@ -16,6 +16,7 @@ black = "21.12b0"
 [tool.poetry.group.dev.dependencies]
 pandas = "^2.0.1"
 torch-geometric = "^2.3.1"
+ipykernel = "^6.23.1"
 
 [build-system]
 requires = ["poetry-core"]
