refactor : refactor lightgcn
* feat : add lightgcn baseline

add lightgcn model

'#3'

* chore : add pyproject.toml

'#3'

* docs : add README.md

Add README.md for LightGCN

'#3'

* chore : update typeCheckingMode

* chore : Ignore warnings with 'warnings' module

'#3'

* refactor : lightgcn refactoring

models.py, trainer.py

'#3'

'#42'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,5 @@
   "python.linting.pylintEnabled": false,
   "python.linting.lintOnSave": true,
   "python.linting.flake8Enabled": true,
-  "python.analysis.typeCheckingMode": "off"
+  "python.analysis.typeCheckingMode": "off",
 }
